@@ -3,24 +3,16 @@
   <div ng-include="'views/tablelist.html'"></div>
 
   <div class="row">
-    <div class="col-lg-9 col-md-9" ng-class="{'margin-left-350': renderSidebar}" ng-show="nothingSelected">
-      <div class="row">
-        <div class="col-lg-11 col-md-11">
-          <div class="page-header">
-            <h1>No table selected</h1>
-            <div id="menu-toggle" ng-click="toggleSidebar()" class="btn btn-default"><i class="icon-reorder"></i></div>
-          </div>
-        </div>
-      </div><!-- /.row -->
-    </div>
 
     <div class="col-lg-9 col-md-9" ng-class="{'margin-left-350': renderSidebar}" ng-show="table">
 
       <div class="row">
         <div class="col-lg-11 col-md-11">
           <div class="page-header">
-            <h1><span ng-show="table.schema_name == 'blob'">BLOB: </span>{{table.name}}</h1>
-            <div id="menu-toggle" ng-click="toggleSidebar()" class="btn btn-default"><i class="icon-reorder"></i></div>
+            <h1>
+              <a id="menu-toggle" ng-click="toggleSidebar()" class="btn btn-default"><i class="fa fa-bars"></i></a>
+              <span ng-show="table.schema_name == 'blob'">BLOB: </span>{{table.name}}
+            </h1>
           </div>
         </div>
       </div><!-- /.row -->
